visualized and simulated the game of wordle

--- a/wordle.ipynb
+++ b/wordle.ipynb
@@ -10,6 +10,7 @@
     "import pandas as pd\n",
     "import os\n",
     "from tqdm import tqdm\n",
+    "\n",
     "# import csv"
    ]
   },
@@ -20,9 +21,9 @@
    "outputs": [],
    "source": [
     "# import word list\n",
-    "with open('data/allowed_words.txt','r') as f:\n",
+    "with open(\"data/allowed_words.txt\", \"r\") as f:\n",
     "    long_word_list = [word.strip() for word in f.readlines()]\n",
-    "with open('data/possible_words.txt','r') as f:\n",
+    "with open(\"data/possible_words.txt\", \"r\") as f:\n",
     "    short_word_list = [word.strip() for word in f.readlines()]\n",
     "\n",
     "# generate reply list\n",
@@ -32,7 +33,7 @@
     "        for k in range(3):\n",
     "            for l in range(3):\n",
     "                for m in range(3):\n",
-    "                    reply_list.append('{:d}{:d}{:d}{:d}{:d}'.format(i, j, k, l, m))"
+    "                    reply_list.append(\"{:d}{:d}{:d}{:d}{:d}\".format(i, j, k, l, m))"
    ]
   },
   {
@@ -44,24 +45,25 @@
     "# generate the map of reply of each pair\n",
     "# 生成每个单词对的回复\n",
     "def generate_map_of_replies():\n",
-    "    for i,word1 in enumerate(short_word_list):\n",
-    "        for j,word2 in enumerate(short_word_list):\n",
-    "            map_of_reply[(i,j)] = reply_of_2_words(word1,word2)\n",
+    "    for i, word1 in enumerate(short_word_list):\n",
+    "        for j, word2 in enumerate(short_word_list):\n",
+    "            map_of_reply[(i, j)] = reply_of_2_words(word1, word2)\n",
     "\n",
-    "# word1 is the tested word, word2 is the answer word \n",
+    "\n",
+    "# word1 is the tested word, word2 is the answer word\n",
     "def reply_of_2_words(word1, word2):\n",
     "    # 1:必须在其他位置有\n",
     "    # 2:必须在相同位置有\n",
-    "    reply = [0,0,0,0,0]\n",
+    "    reply = [0, 0, 0, 0, 0]\n",
     "    for i in range(5):\n",
     "        if word1[i] == word2[i]:\n",
     "            reply[i] = 2\n",
     "        elif word1[i] in word2:\n",
     "            reply[i] = 1\n",
-    "            word2 = word2.replace(word1[i],'*',1)\n",
+    "            word2 = word2.replace(word1[i], \"*\", 1)\n",
     "        else:\n",
     "            reply[i] = 0\n",
-    "    return ''.join([str(i) for i in reply])"
+    "    return \"\".join([str(i) for i in reply])"
    ]
   },
   {
@@ -99,8 +101,8 @@
     "# game solution0: use E_info_list created before every guess\n",
     "def solution0(start_word):\n",
     "    # E_info_df= pd.read_csv('result/E_info_for_all_words.csv')\n",
-    "    if start_word == '':\n",
-    "        start_word = 'saner'\n",
+    "    if start_word == \"\":\n",
+    "        start_word = \"saner\"\n",
     "    guessing_word = start_word\n",
     "    possible_words = short_word_list.copy()\n",
     "    guessed_words = []\n",
@@ -108,32 +110,35 @@
     "\n",
     "    while True:\n",
     "        if guessing_word == ANSWER:\n",
-    "            #print('end')\n",
+    "            # print('end')\n",
     "            break\n",
     "        turn += 1\n",
     "\n",
-    "        reply = map_of_reply[(short_word_list.index(guessing_word),short_word_list.index(ANSWER))]  \n",
+    "        reply = map_of_reply[(short_word_list.index(guessing_word), short_word_list.index(ANSWER))]\n",
     "\n",
     "        guessed_words.append(guessing_word)\n",
     "        possible_words_old = possible_words.copy()\n",
-    "        possible_words=[]\n",
+    "        possible_words = []\n",
     "        for word in possible_words_old:\n",
-    "            if map_of_reply[(short_word_list.index(guessing_word),short_word_list.index(word))] == reply and word not in guessed_words:\n",
+    "            if (\n",
+    "                map_of_reply[(short_word_list.index(guessing_word), short_word_list.index(word))] == reply\n",
+    "                and word not in guessed_words\n",
+    "            ):\n",
     "                possible_words.append(word)\n",
     "\n",
-    "        # print('turn:',turn,'    possible_words: ', possible_words)     \n",
+    "        # print('turn:',turn,'    possible_words: ', possible_words)\n",
     "\n",
     "        # find out the word with max E_info in E_info_df\n",
     "        max_E_info = 0\n",
     "        for word in possible_words:\n",
-    "            E_info = E_info_df.loc[E_info_df['word'] == word]['E_info'].values[0]\n",
+    "            E_info = E_info_df.loc[E_info_df[\"word\"] == word][\"E_info\"].values[0]\n",
     "            if E_info > max_E_info:\n",
     "                max_E_info = E_info\n",
     "                guessing_word = word\n",
     "\n",
     "        # print('turn:',turn+1,'    guessing word: ', guessing_word)\n",
-    "        \n",
-    "    return turn+1"
+    "\n",
+    "    return turn + 1"
    ]
   },
   {
@@ -144,8 +149,8 @@
    "source": [
     "# game solution1: use the word has the highest E_info satisfied the reply every time\n",
     "def solution1(start_word):\n",
-    "    if start_word == '':\n",
-    "        start_word = 'saner'\n",
+    "    if start_word == \"\":\n",
+    "        start_word = \"saner\"\n",
     "    guessing_word = start_word\n",
     "    possible_words = short_word_list.copy()\n",
     "    guessed_words = []\n",
@@ -153,45 +158,57 @@
     "\n",
     "    while True:\n",
     "        if guessing_word == ANSWER:\n",
-    "            print('end')\n",
+    "            print(\"end\")\n",
     "            break\n",
     "        turn += 1\n",
     "\n",
-    "        reply = map_of_reply[(short_word_list.index(guessing_word),short_word_list.index(ANSWER))]  \n",
+    "        reply = map_of_reply[(short_word_list.index(guessing_word), short_word_list.index(ANSWER))]\n",
     "\n",
     "        guessed_words.append(guessing_word)\n",
     "        possible_words_old = possible_words.copy()\n",
-    "        possible_words=[]\n",
+    "        possible_words = []\n",
     "        for word in possible_words_old:\n",
-    "            if map_of_reply[(short_word_list.index(guessing_word),short_word_list.index(word))] == reply and word not in guessed_words:\n",
+    "            if (\n",
+    "                map_of_reply[(short_word_list.index(guessing_word), short_word_list.index(word))] == reply\n",
+    "                and word not in guessed_words\n",
+    "            ):\n",
     "                possible_words.append(word)\n",
     "\n",
-    "        print('turn:',turn,'    possible_words: ', possible_words)     \n",
+    "        print(\"turn:\", turn, \"    possible_words: \", possible_words)\n",
     "\n",
     "        E_info_list = []\n",
     "        for word in possible_words:\n",
     "            E_info_list.append(calc_E_info(word, possible_words))\n",
     "        guessing_word = possible_words[np.argmax(E_info_list)]\n",
     "\n",
-    "        print('turn:',turn+1,'    guessing word: ', guessing_word)\n",
-    "        \n",
-    "    return turn+1\n",
+    "        print(\"turn:\", turn + 1, \"    guessing word: \", guessing_word)\n",
+    "\n",
+    "    return turn + 1\n",
+    "\n",
     "\n",
     "# 根据（新的）可能的词库计算E_info\n",
     "def calc_E_info(word, possible_words):\n",
     "    E_info = 0\n",
     "    # 遍历所有 word 对应的可能的 reply，去除重复的值\n",
-    "    for reply in list(set([value for key, value in map_of_reply.items() if key[0] == short_word_list.index(word)])):\n",
-    "    # for reply in reply_list:\n",
+    "    for reply in list(\n",
+    "        set([value for key, value in map_of_reply.items() if key[0] == short_word_list.index(word)])\n",
+    "    ):\n",
+    "        # for reply in reply_list:\n",
     "        # 找出map_of_reply中key[0]为word,且value为reply的个数\n",
     "        # 使用列表推导式和 if 语句筛选出符合条件的键值对，并使用 len() 函数计算符合条件的键值对的个数\n",
-    "        count = len([value for key, value in map_of_reply.items() if key[0] == short_word_list.index(word) and value == reply])\n",
-    "        p_x= count/len(possible_words)  \n",
+    "        count = len(\n",
+    "            [\n",
+    "                value\n",
+    "                for key, value in map_of_reply.items()\n",
+    "                if key[0] == short_word_list.index(word) and value == reply\n",
+    "            ]\n",
+    "        )\n",
+    "        p_x = count / len(possible_words)\n",
     "        if p_x != 0:\n",
-    "            E_info += p_x*np.log2(1/p_x)\n",
+    "            E_info += p_x * np.log2(1 / p_x)\n",
     "\n",
-    "        # print('word:',word,'reply:',reply,'count:',count,'p_x:',p_x)  # test code      \n",
-    "    return E_info\n"
+    "        # print('word:',word,'reply:',reply,'count:',count,'p_x:',p_x)  # test code\n",
+    "    return E_info"
    ]
   },
   {
@@ -211,7 +228,7 @@
     }
    ],
    "source": [
-    "'''\n",
+    "\"\"\"\n",
     "# 计算猜的第一个词的E_info列表，根据E_info列表选择第一个猜的词\n",
     "# this step costs about\n",
     "# read csv if exists\n",
@@ -224,7 +241,7 @@
     "    E_info_list_1.sort_values(by='E_info',ascending=False,inplace=True)\n",
     "    E_info_list_1.to_csv('result/E_info_list_1.csv',index=False)\n",
     "E_info_list_1.head()\n",
-    "'''"
+    "\"\"\""
    ]
   },
   {
@@ -233,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "E_info_df= pd.read_csv('result/E_info_for_all_words.csv')"
+    "E_info_df = pd.read_csv(\"result/E_info_for_all_words.csv\")"
    ]
   },
   {
@@ -255,7 +272,7 @@
     "for i in tqdm(range(100)):\n",
     "    ANSWER = np.random.choice(short_word_list)\n",
     "    # guess_record.append({'ANSWER': ANSWER, 'turn': solution1('slate')})\n",
-    "    guess_record.append({'ANSWER': ANSWER, 'turn': solution0('saner')}) # simu 1000 times for about 2 minutes\n",
+    "    guess_record.append({\"ANSWER\": ANSWER, \"turn\": solution0(\"saner\")})  # simu 1000 times for about 2 minutes\n",
     "\n",
     "guess_record_df = pd.DataFrame(guess_record)"
    ]
@@ -299,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
