--- a/wordle_1st_E_info.ipynb
+++ b/wordle_1st_E_info.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import word list\n",
-    "with open('data/allowed_words.txt','r') as f:\n",
+    "with open(\"data/allowed_words.txt\", \"r\") as f:\n",
     "    long_word_list = [word.strip() for word in f.readlines()]\n",
-    "with open('data/possible_words.txt','r') as f:\n",
+    "with open(\"data/possible_words.txt\", \"r\") as f:\n",
     "    short_word_list = [word.strip() for word in f.readlines()]\n",
     "\n",
     "# generate reply list\n",
@@ -30,12 +30,12 @@
     "        for k in range(3):\n",
     "            for l in range(3):\n",
     "                for m in range(3):\n",
-    "                    reply_list.append([i, j, k, l, m])\n"
+    "                    reply_list.append([i, j, k, l, m])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,9 +43,10 @@
     "def split_word(word):\n",
     "    return [letter for letter in word]\n",
     "\n",
+    "\n",
     "# get the game output\n",
     "def guess_reply(guessing_word, answer):\n",
-    "    reply=[0,0,0,0,0]\n",
+    "    reply = [0, 0, 0, 0, 0]\n",
     "    guessing_word_letters = split_word(guessing_word)\n",
     "    answer_letters = split_word(answer)\n",
     "    for letter in guessing_word_letters:\n",
@@ -55,13 +56,17 @@
     "            reply[guessing_word_letters.index(letter)] = 2\n",
     "    return reply\n",
     "\n",
+    "\n",
     "# 输入一个词和一个回复，从词库中找出所有可能的词\n",
-    "def simu_reply(guessing_word,judged_word,reply):\n",
+    "def simu_reply(guessing_word, judged_word, reply):\n",
     "    # 1:必须在其他位置有\n",
     "    # 2:必须在相同位置有\n",
     "    for i in range(5):\n",
     "        if reply[i] == 1:\n",
-    "            if guessing_word[i] not in judged_word or guessing_word[i] == judged_word[i]:\n",
+    "            if (\n",
+    "                guessing_word[i] not in judged_word\n",
+    "                or guessing_word[i] == judged_word[i]\n",
+    "            ):\n",
     "                return False\n",
     "        if reply[i] == 2:\n",
     "            if guessing_word[i] != judged_word[i]:\n",
@@ -71,27 +76,31 @@
     "                return False\n",
     "    return True\n",
     "\n",
+    "\n",
     "# find the possible words in the long_word_list\n",
     "def find_possible_words(guessing_word, reply):\n",
     "    possible_words = []\n",
     "    for word in long_word_list:\n",
-    "        if simu_reply(guessing_word,word,reply):\n",
+    "        if simu_reply(guessing_word, word, reply):\n",
     "            possible_words.append(word)\n",
     "    return possible_words\n",
+    "\n",
     "\n",
     "def find_possible_words_adjusted(guessing_word, reply, possible_words):\n",
     "    possible_words_reducted = []\n",
     "    for word in possible_words:\n",
-    "        if simu_reply(guessing_word,word,reply):\n",
+    "        if simu_reply(guessing_word, word, reply):\n",
     "            possible_words_reducted.append(word)\n",
     "    return possible_words_reducted\n",
+    "\n",
     "\n",
     "# calculate the info of the guessing word\n",
     "def calc_info(guessing_word, reply):\n",
     "    possible_words = find_possible_words(guessing_word, reply)\n",
     "    num_of_words = len(possible_words)\n",
     "    p_x = num_of_words / len(long_word_list)\n",
-    "    return np.log2(1/p_x)\n",
+    "    return np.log2(1 / p_x)\n",
+    "\n",
     "\n",
     "# calculate the entropy of the guessing word\n",
     "def calc_E_info(guessing_word):\n",
@@ -99,24 +108,27 @@
     "    for reply in reply_list:\n",
     "        possible_words = find_possible_words(guessing_word, reply)\n",
     "        p_x = len(possible_words) / len(long_word_list)\n",
-    "        if p_x != 0:    \n",
-    "            E_info += p_x * np.log2(1/p_x)\n",
+    "        if p_x != 0:\n",
+    "            E_info += p_x * np.log2(1 / p_x)\n",
     "    return E_info\n",
     "\n",
-    "def calc_E_info_adjusted(guessing_word,possible_words):\n",
+    "\n",
+    "def calc_E_info_adjusted(guessing_word, possible_words):\n",
     "    E_info = 0\n",
     "    total_num = len(possible_words)\n",
     "    for reply in reply_list:\n",
-    "        possible_words = find_possible_words_adjusted(guessing_word, reply, possible_words)\n",
+    "        possible_words = find_possible_words_adjusted(\n",
+    "            guessing_word, reply, possible_words\n",
+    "        )\n",
     "        p_x = len(possible_words) / total_num\n",
-    "        if p_x != 0:    \n",
-    "            E_info += p_x * np.log2(1/p_x)\n",
+    "        if p_x != 0:\n",
+    "            E_info += p_x * np.log2(1 / p_x)\n",
     "    return E_info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -417,17 +429,17 @@
     }
    ],
    "source": [
-    "E_info_for_all_words = pd.DataFrame(columns=['word', 'E_info'])\n",
+    "E_info_for_all_words = pd.DataFrame(columns=[\"word\", \"E_info\"])\n",
     "\n",
     "for word in long_word_list:\n",
     "    E_info_for_all_words.loc[len(E_info_for_all_words)] = [word, calc_E_info(word)]\n",
-    "    print(E_info_for_all_words.loc[len(E_info_for_all_words)-1])\n",
+    "    print(E_info_for_all_words.loc[len(E_info_for_all_words) - 1])\n",
     "\n",
     "# 排序\n",
-    "E_info_for_all_words.sort_values(by='E_info', ascending=False, inplace=True)\n",
+    "E_info_for_all_words.sort_values(by=\"E_info\", ascending=False, inplace=True)\n",
     "\n",
     "# 保存\n",
-    "E_info_for_all_words.to_csv('result/E_info_for_all_words.csv', index=False)"
+    "E_info_for_all_words.to_csv(\"result/E_info_for_all_words.csv\", index=False)"
    ]
   },
   {
@@ -490,24 +502,24 @@
     "#         game_reply[turn] = guess_reply(guessing_word[turn], ANSWER)\n",
     "#         print(turn,guessing_word[turn],game_reply[turn])\n",
     "\n",
-    "#         possible_words= find_possible_words_adjusted(guessing_word[turn], \n",
+    "#         possible_words= find_possible_words_adjusted(guessing_word[turn],\n",
     "#                                                 game_reply[turn],\n",
-    "#                                                 possible_words)  \n",
+    "#                                                 possible_words)\n",
     "#         E_info_for_possible_words = pd.DataFrame(columns=['word', 'E_info'])\n",
     "#         for word in possible_words:\n",
     "#             E_info_for_possible_words.loc[len(E_info_for_possible_words)] = [word, calc_E_info_adjusted(word,possible_words)]\n",
     "#         E_info_for_possible_words.sort_values(by='E_info', ascending=False, inplace=True)\n",
     "#         guessing_word[turn+1]=E_info_for_possible_words['word'][0]\n",
-    "        \n",
+    "\n",
     "#         if guessing_word[turn+1]==ANSWER:\n",
     "#             print(ANSWER)\n",
     "#             break\n",
     "\n",
     "#         turn+=1\n",
-    "    \n",
+    "\n",
     "#     return guessing_word\n",
     "\n",
-    "# solution1('')\n"
+    "# solution1('')"
    ]
   },
   {
